--- a/css/style.css
+++ b/css/style.css
@@ -381,21 +381,63 @@ main {
 .about_me_content p:not(:last-of-type) { margin-bottom: 15px; }
 
 /*----------------------------
+    Knowledge Areas
+-----------------------------*/
+
+.content_modal {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+}
+
+.items {
+    position: relative;
+    background: var(--border-gradient-onyx);
+    padding: 20px;
+    border-radius: 14px;
+    box-shadow: var(--shadow-2);
+    z-index: 1;
+}
+
+.items::before {
+    content: '';
+    position: absolute;
+    inset: 1px;
+    background: var(--gradient-jet);
+    border-radius: inherit;
+    z-index: -1;
+}
+
+.image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+}
+
+figcaption {
+    text-align: center;
+    margin: 10px 0;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--white-1);
+}
+
+.description_area {
+    text-align: center;
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: var(--light-gray-70);
+}
+
+
+/*----------------------------
     Skills section
 -----------------------------*/
 
-.my_skills ul {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
 
-.skills_items {
-    height: 200px;
-    background: var(--gradient-jet);
-    box-shadow: var(--shadow-2);
-    border-radius: 16px;
-}
 
 /*----------------------------
     Resume me section
@@ -764,10 +806,7 @@ input:focus:invalid, textarea:focus:invalid { border-color: var(--bittersweet-sh
         margin-top: 35px;
     }
 
-    .skills_container h1 {
-        font-size: var(--fs-title);
-        margin: 20px 0 15px 0;
-    }
+    
 
     /*
      * RESUME STYLE
@@ -887,6 +926,15 @@ input:focus:invalid, textarea:focus:invalid { border-color: var(--bittersweet-sh
 
     #navbar > ul { gap: 40px; }
 
+
+    /*
+    *   ABOUT SECTION
+    */
+
+    .content_modal {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 25px;
+    }
 
     /*
     *   PORTFOLIO
