--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,23 @@ main {
     Reused style
 -----------------------------*/
 
+.has_scrollbar::-webkit-scrollbar {
+    width: 5px; /* for vertical scrollbar */
+    height: 5px; /* for horizontal scrollbar */
+}
+  
+.has_scrollbar::-webkit-scrollbar-track {
+    background: var(--onyx);
+    border-radius: 5px;
+}
+  
+.has_scrollbar::-webkit-scrollbar-thumb {
+    background: var(--orange-yellow-crayola);
+    border-radius: 5px;
+}
+  
+.has_scrollbar::-webkit-scrollbar-button { width: 20px; }
+
 #sidebar, article {
     background: var(--eerie-black-2);
     border: 1px solid var(--jet);
@@ -384,7 +401,7 @@ main {
     Knowledge Areas
 -----------------------------*/
 
-.content_modal {
+.content_modal > ul {
     display: grid;
     grid-template-columns: 1fr;
     gap: 15px;
@@ -437,7 +454,147 @@ figcaption {
     Skills section
 -----------------------------*/
 
+.skills_container { margin-bottom: 30px; }
 
+.skills_list {
+    display: flex;
+    justify-content: flex-start;
+    gap: 15px;
+    margin: 0 -15px;
+    padding: 25px 15px;
+    padding-bottom: 35px;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    overscroll-behavior-inline: contain;
+    scroll-snap-type: inline mandatory;
+}
+
+.skill_item {
+    position: relative;
+    min-width: 100%;
+    scroll-snap-align: center;
+    position: relative;
+    background: var(--border-gradient-onyx);
+    padding: 20px;
+    border-radius: 14px;
+    box-shadow: var(--shadow-2);
+    z-index: 1;
+}
+
+.skill_item::before {
+    content: '';
+    position: absolute;
+    inset: 1px;
+    background: var(--gradient-jet);
+    border-radius: inherit;
+    z-index: -1;
+}
+
+.skills_img {
+    position: absolute;
+    width: max-content;
+    top: 0;
+    left: 0;
+    transform: translate(15px, -25px);
+    background-color: var(--border-gradient-onyx);
+    border-radius: 14px;
+    box-shadow: var(--shadow-1);
+}
+
+.skills_description h3 {
+    margin-top: 30px;
+    font-size: var(--fs-medium);
+    font-weight: 600;
+    color: var(--white-1);
+}
+
+.skills_description p {
+    margin-top: 10px;
+    font-size: var(--fs-text);
+    color: var(--light-gray-70);
+}
+
+
+/*----------------------------
+    Modal Skills section
+-----------------------------*/
+
+.modal_container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
+    overscroll-behavior: contain;
+    z-index: 20;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.modal_container::-webkit-scrollbar { display: none; }
+
+.modal_container.active {
+    pointer-events: all;
+    visibility: visible;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: hsl(0, 0%, 5%);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 1;
+    transition: var(--transition-1);
+}
+
+.ovarlay.active {
+    opacity: 0.8;
+    visibility: visible;
+    pointer-events: all;
+}
+
+.skills_modal {
+    background: var(--eerie-black-2);
+    position: relative;
+    padding: 15px 12px;
+    border: 1px solid var(--jet);
+    border-radius: 14px;
+    box-shadow: var(--shadow-4);
+    transform: scale(1.2);
+    opacity: 0;
+    transform: var(--transition-1);
+    z-index: 2;
+}
+
+.modal_container.active .skills_modal {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.close_btn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background: var(--onyx);
+    border-radius: 8px;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white-2);
+    font-size: 18px;
+    opacity: 0.7;
+}
 
 /*----------------------------
     Resume me section
@@ -931,7 +1088,7 @@ input:focus:invalid, textarea:focus:invalid { border-color: var(--bittersweet-sh
     *   ABOUT SECTION
     */
 
-    .content_modal {
+    .content_modal > ul {
         grid-template-columns: repeat(2, 1fr);
         gap: 25px;
     }
